Podesavanje postavki projekta.

--- a/Algebra_Seminar_Drdic/appsettings.json
+++ b/Algebra_Seminar_Drdic/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Algebra_Seminar_Drdic-88FBC3F6-CE59-4CBE-B4E1-4587487D5C3E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\sqlexpress;Database = Seminar_Drdic; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate = true"
   },
   "Logging": {
     "LogLevel": {
