README.md file added. Not finished. Minor details. Some unexpected erors with API. Must take a look.

--- a/Algebra_Seminar_Drdic/Algebra_Seminar_Drdic.csproj
+++ b/Algebra_Seminar_Drdic/Algebra_Seminar_Drdic.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Algebra_Seminar_Drdic-88FBC3F6-CE59-4CBE-B4E1-4587487D5C3E</UserSecretsId>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,6 +23,13 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
